--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ img.active{grid-column:span 2;grid-row:span 2}
 }
 </style>
 <body>
-<script src="utils.js"></script>
-<script src="algorithm.js"></script>
-<script src="eventsource.js"></script>
-<script src="init.js"></script>
+    <script src="utils.js?v=17"></script>
+    <script src="algorithm.js?v=17"></script>
+    <script src="eventsource.js?v=17"></script>
+    <script src="init.js?v=17"></script>
 </body>
 </html>
